Change start time and end time semantics
