# app/controllers/rooms_controller.rb
@@ -49,6 +49,6 @@ class RoomsController < ApplicationController
 
   # Only allow a list of trusted parameters through.
   def room_params
-    params.require(:room).permit(:name, :start_time, :end_time)
+    params.require(:room).permit(:name, :opened_at, :closed_at)
   end
 end
