# db/schema.rb
@@ -10,7 +10,7 @@
 #
 # It's strongly recommended that you check this file into your version control system.
 
-ActiveRecord::Schema[7.0].define(version: 2023_06_03_092448) do
+ActiveRecord::Schema[7.0].define(version: 2023_06_03_100355) do
   # These are extensions that must be enabled in order to support this database
   enable_extension "plpgsql"
 
@@ -18,8 +18,8 @@ ActiveRecord::Schema[7.0].define(version: 2023_06_03_092448) do
     t.string "name"
     t.datetime "created_at", null: false
     t.datetime "updated_at", null: false
-    t.time "start_time"
-    t.time "end_time"
+    t.time "opened_at"
+    t.time "closed_at"
     t.index ["name"], name: "index_rooms_on_name", unique: true
   end
 
